add plugin Markdown Preview

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ Pristine\ Packages/User.sublime-package
 Pristine\ Packages/Vintage.sublime-package
 Pristine\ Packages/XML.sublime-package
 Pristine\ Packages/YAML.sublime-package
+Settings/Auto\ Save\ Session.sublime_session
+Settings/Session.sublime_session
+
