--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ Packages/CSS
 Packages/Clojure
 Packages/Color\ Scheme\ -\ Default
 Packages/D
-Packages/Default
 Packages/Diff
 Packages/Erlang
 Packages/Go
@@ -98,3 +97,105 @@ Pristine\ Packages/YAML.sublime-package
 Settings/Auto\ Save\ Session.sublime_session
 Settings/Session.sublime_session
 
+Packages/Default/.DS_Store
+Packages/Default/Add\ Line\ Before.sublime-macro
+Packages/Default/Add\ Line\ in\ Braces.sublime-macro
+Packages/Default/Add\ Line.sublime-macro
+Packages/Default/Context.sublime-menu
+Packages/Default/Default\ (Linux).sublime-keymap
+Packages/Default/Default\ (Linux).sublime-mousemap
+Packages/Default/Default\ (OSX).sublime-keymap
+Packages/Default/Default\ (OSX).sublime-mousemap
+Packages/Default/Default\ (Windows).sublime-keymap
+Packages/Default/Default\ (Windows).sublime-mousemap
+Packages/Default/Default.sublime-commands
+Packages/Default/Delete\ Left\ Right.sublime-macro
+Packages/Default/Delete\ Line.sublime-macro
+Packages/Default/Delete\ to\ BOL.sublime-macro
+Packages/Default/Delete\ to\ EOL.sublime-macro
+Packages/Default/Delete\ to\ Hard\ BOL.sublime-macro
+Packages/Default/Delete\ to\ Hard\ EOL.sublime-macro
+Packages/Default/Distraction\ Free.sublime-settings
+Packages/Default/Find\ Results.hidden-tmLanguage
+Packages/Default/Find\ in\ Files.sublime-menu
+Packages/Default/Icon.png
+Packages/Default/Ignored\ Packages.cache
+Packages/Default/Indentation\ Rules\ -\ Comments.tmPreferences
+Packages/Default/Indentation\ Rules\ -\ Comments.tmPreferences.cache
+Packages/Default/Indentation\ Rules.tmPreferences
+Packages/Default/Indentation\ Rules.tmPreferences.cache
+Packages/Default/Indentation.sublime-menu
+Packages/Default/Main.sublime-menu
+Packages/Default/Meta\ Info\ Summary.cache
+Packages/Default/Minimap.sublime-settings
+Packages/Default/Preferences\ (Linux).sublime-settings
+Packages/Default/Preferences\ (OSX).sublime-settings
+Packages/Default/Preferences\ (Windows).sublime-settings
+Packages/Default/Preferences.sublime-settings
+Packages/Default/Regex\ Format\ Widget.sublime-settings
+Packages/Default/Regex\ Widget.sublime-settings
+Packages/Default/Side\ Bar\ Mount\ Point.sublime-menu
+Packages/Default/Side\ Bar.sublime-menu
+Packages/Default/Startup.cache
+Packages/Default/Symbol\ List.tmPreferences
+Packages/Default/Symbol\ List.tmPreferences.cache
+Packages/Default/Syntax\ Summary.cache
+Packages/Default/Syntax.sublime-menu
+Packages/Default/Tab\ Context.sublime-menu
+Packages/Default/Widget\ Context.sublime-menu
+Packages/Default/Widget.sublime-settings
+Packages/Default/comment.py
+Packages/Default/comment.pyc
+Packages/Default/copy_path.py
+Packages/Default/copy_path.pyc
+Packages/Default/delete_word.py
+Packages/Default/delete_word.pyc
+Packages/Default/detect_indentation.py
+Packages/Default/detect_indentation.pyc
+Packages/Default/duplicate_line.py
+Packages/Default/duplicate_line.pyc
+Packages/Default/echo.py
+Packages/Default/echo.pyc
+Packages/Default/exec.py
+Packages/Default/exec.pyc
+Packages/Default/fold.py
+Packages/Default/fold.pyc
+Packages/Default/font.py
+Packages/Default/font.pyc
+Packages/Default/goto_line.py
+Packages/Default/goto_line.pyc
+Packages/Default/indentation.py
+Packages/Default/indentation.pyc
+Packages/Default/kill_ring.py
+Packages/Default/kill_ring.pyc
+Packages/Default/mark.py
+Packages/Default/mark.pyc
+Packages/Default/new_templates.py
+Packages/Default/new_templates.pyc
+Packages/Default/open_file_settings.py
+Packages/Default/open_file_settings.pyc
+Packages/Default/open_in_browser.py
+Packages/Default/open_in_browser.pyc
+Packages/Default/paragraph.py
+Packages/Default/paragraph.pyc
+Packages/Default/save_on_focus_lost.py
+Packages/Default/save_on_focus_lost.pyc
+Packages/Default/scroll.py
+Packages/Default/scroll.pyc
+Packages/Default/send2trash
+Packages/Default/set_unsaved_view_name.py
+Packages/Default/set_unsaved_view_name.pyc
+Packages/Default/side_bar.py
+Packages/Default/side_bar.pyc
+Packages/Default/sort.py
+Packages/Default/sort.pyc
+Packages/Default/swap_line.py
+Packages/Default/swap_line.pyc
+Packages/Default/switch_file.py
+Packages/Default/switch_file.pyc
+Packages/Default/transform.py
+Packages/Default/transform.pyc
+Packages/Default/transpose.py
+Packages/Default/transpose.pyc
+Packages/Default/trim_trailing_white_space.py
+Packages/Default/trim_trailing_white_space.pyc
