--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .DS_Store
+*.cache
+Settings/Session.sublime_session
+Packages/User/Package\ Control.last-run
+Backup/
 Packages/ASP
 Packages/ActionScript
 Packages/AppleScript
